--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
-  "homepage": "https://tola.github.io/wishlist",
+  "homepage": "https://tolganay.github.io/wishlist",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
